# advanced-3d-mri-viewer

./: .gitignore  AGENTS.md  CMakeLists.txt  label_config.json  main.py  mri_viewer.py  prompt_20260116_073126.md  readme.md  requirements.txt  style.py
docs/: build_linux.md  build_windows.md
html/: index.html
resources/: style_dark.qss
src/: CMakeLists.txt  ExportWorker.cpp  ExportWorker.h  MainWindow.cpp  MainWindow.h  ViewerCore.cpp  ViewerCore.h  main.cpp  mri_viewer.py
src/utils/: check_imports.py  export_worker.py  mouse_wheel_interactor_style.py  snapshots.py  style.py
tools/: find_non_utf8.py
